# MEEP-Alpha

./: CMakeLists.txt  LICENSE  Lexer.cpp  ParsingProject.cpp  ParsingProject.h  README.md  UnitTests.cpp  UnitTests.h
Lexer/: Lexer.cpp  Lexer.h
